# rs-image-processing-svc

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
conf/: config.toml
src/: main.rs
src/config/: mod.rs  parameter.rs  settings.rs
src/error/: errors.rs
src/handler/: antispoofing_handler.rs  general_handler.rs  mod.rs
src/logger/: logger.rs
src/middleware/: api_key_mw.rs  mod.rs  request_id_mw.rs
src/models/: antispoofing_model.rs  general_model.rs  mod.rs
src/pipeline/: mod.rs
src/pipeline/antispoofing_pipeline/: antispoofing_pipeline.rs  mod.rs
src/pipeline/general_pipeline/: general_pipeline.rs  mod.rs
src/pipeline/model_config/: config.rs
src/pipeline/module/: face_alignment.rs  face_antispoofing.rs  face_detection.rs  face_extraction.rs  face_quality.rs  face_quality_assessment.rs  face_selection.rs  mod.rs
src/pipeline/processing/: bbox_transform.rs  generate_anchors.rs  mod.rs  nms.rs
src/pipeline/rcnn/: anchors.rs  bbox.rs  cpu_nms.rs  gpu_nms.hpp  gpu_nms.rs  mod.rs
src/pipeline/triton_client/: client.rs
src/pipeline/utils/: coordinate.rs  image.rs  mod.rs  utils.rs
src/response/: common_response.rs  mod.rs
src/routes/: mod.rs  root.rs
src/routes/v2/: antispoofing_extract.rs  general_extract.rs  mod.rs
src/service/: antispoofing_service.rs  general_service.rs  mod.rs
src/state/: antispoofing_state.rs  general_state.rs  mod.rs
src/tracer/: tracer.rs
triton_proto/: grpc_service.proto  model_config.proto
