[package]
name = "rs-image-processing-service"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version="0.7.5", features = ["multipart", "macros"] }
serde = "1.0.204"
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.120"
mime = "0.3.17"
bytes = "1.6.1"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["v4"] }
ecs-logger = "1.1.0"
env_logger = "0.11.3"
dotenv = "0.15.0"
config = "0.14.0"
once_cell = "1.19.0"
tonic-build = "0.12.0"
ndarray = { version="0.15.6", features = ["serde"] }
anyhow = "1.0.86"
tonic = "0.12.0"
prost = "0.13.1"
opencv = { version = "0.92.0", default-features = false, features = ["calib3d", "features2d", "rgb", "imgproc", "imgcodecs"]}
ndarray-linalg = "0.16.0"
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.62"
tower-http = { version = "0.5.2", features = ["trace", "compression-br", "propagate-header", "sensitive-headers", "cors", "limit", "timeout"] }
http = "1.1.0"
bincode = "2.0.0-rc.3"
tower-request-id = "0.3.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0" }

#[features]
#jemalloc = ["tikv-jemallocator"]

[build-dependencies]
tonic-build = "0.12.0"

[profile.dev]
opt-level = 0
incremental = false

[profile.release]
opt-level = 3
